# CookieCutter_Airflow

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/dags/: example_dag.py
